<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bottom_home"
        android:title="@string/today"
        android:icon="@drawable/baseline_home_24"/>

    <item
        android:id="@+id/bottom_schedule"
        android:title="@string/schedule"
        android:icon="@drawable/baseline_schedule_24"/>

    <item
        android:id="@+id/bottom_requests"
        android:title="@string/requests"
        android:icon="@drawable/baseline_back_hand_24"/>

    <item
        android:id="@+id/bottom_profile"
        android:title="@string/profile"
        android:icon="@drawable/baseline_man_3_24"/>
    <item
        android:id="@+id/bottom_logout"
        android:title="@string/logout"
        android:icon="@drawable/baseline_logout_24" />
</menu>
