<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <!-- ImageView for employee headshot -->
    <ImageView
        android:id="@+id/employeeHeadshotImageView"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_margin="8dp"
        android:src="@drawable/baseline_person_24"
        android:contentDescription="@string/headshot" />

    <!-- LinearLayout to hold TextViews vertically -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/shiftName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/employee_name"
            android:padding="8dp"/>

        <TextView
            android:id="@+id/shiftRole"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/employee_s_role"
            android:textSize="18sp"
            android:textStyle="bold"
            android:padding="8dp"/>

        <TextView
            android:id="@+id/shiftStartTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shift_start_time"
            android:textSize="18sp"
            android:textStyle="bold"
            android:padding="8dp"/>
    </LinearLayout>
</LinearLayout>
