<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">

    <TextView
        android:id="@+id/header_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_profile"
        android:textColor="#43a047"
        android:textSize="40sp"
        android:textStyle="italic|bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/profileImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.5"/>

    <ImageView
        android:id="@+id/profileImageView"
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/resizedryan"
        app:layout_constraintTop_toBottomOf="@id/header_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@id/userNameTV"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/userNameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"
        app:layout_constraintTop_toBottomOf="@id/profileImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@id/PhoneNumberTV"/>

    <TextView
        android:id="@+id/PhoneNumberTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/user_phone_number"
        app:layout_constraintTop_toBottomOf="@id/userNameTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toTopOf="@id/emailAddressTV"/>

    <TextView
        android:id="@+id/emailAddressTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/user_email_address"
        app:layout_constraintTop_toBottomOf="@id/PhoneNumberTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        app:layout_constraintTop_toBottomOf="@id/emailAddressTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>