<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/tvStartTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_time"
        app:layout_constraintTop_toBottomOf="@id/datePicker"
        app:layout_constraintStart_toStartOf="@id/datePicker"
        android:layout_marginTop="16dp"/>

    <Spinner
        android:id="@+id/spinnerStartTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/datePicker"
        app:layout_constraintEnd_toEndOf="@id/datePicker"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_time"
        app:layout_constraintTop_toBottomOf="@id/tvStartTime"
        app:layout_constraintStart_toStartOf="@id/datePicker"
        android:layout_marginTop="16dp"/>

    <Spinner
        android:id="@+id/spinnerEndTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvStartTime"
        app:layout_constraintEnd_toEndOf="@id/datePicker"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/tvRole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/role"
        app:layout_constraintTop_toBottomOf="@id/spinnerEndTime"
        app:layout_constraintStart_toStartOf="@id/datePicker"
        android:layout_marginTop="16dp"/>

    <Spinner
        android:id="@+id/spinnerRole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/spinnerEndTime"
        app:layout_constraintEnd_toEndOf="@id/datePicker"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/employees"
        app:layout_constraintTop_toBottomOf="@id/tvRole"
        app:layout_constraintStart_toStartOf="@id/datePicker"
        android:layout_marginTop="16dp"/>

    <Spinner
        android:id="@+id/spinnerEmployees"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvRole"
        app:layout_constraintEnd_toEndOf="@id/datePicker"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        app:layout_constraintTop_toBottomOf="@id/spinnerEmployees"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
